feat: create cloud architecture key topics

--- a/docs/key-topics/cloud-infrastructure/admin.mdx
+++ b/docs/key-topics/cloud-infrastructure/admin.mdx
@@ -11,12 +11,22 @@ import { Box, Button, Grid, Link } from "theme-ui";
 import DiagramAdmin from "./components/DiagramAdmin";
 
 :::tip What you’ll learn
-- what does the `api` project application represent
-- the necessary cloud infrastructure resources on which the `api` project application relies on
+
+- what does the **Admin Area** project application represent
+- the necessary cloud infrastructure resources on which the **Admin Area** project application relies on
 :::
 
 ## Overview
 
-The `api` application represents your project's (GraphQL) API.
+The **Admin Area** project application represents, as the name itself suggests, your administration area, which is a simple React single-page-application (SPA).
 
-<DiagramAdmin/>
+With only two cloud infrastructure resources, the Amazon CloudFront and Amazon S3, hosting single page applications is simple and most importantly, cost-effective.
+
+:::info
+Dive deeper by taking a closer look at this project application [in our GitHub repository](https://github.com/webiny/webiny-js/tree/v5/packages/cwp-template-aws/template/api).
+:::
+
+## Diagrams
+
+<DiagramAdmin />
+
