--- a/docs/key-topics/cloud-infrastructure/api.mdx
+++ b/docs/key-topics/cloud-infrastructure/api.mdx
@@ -11,12 +11,23 @@ import { Box, Button, Grid, Link } from "theme-ui";
 import DiagramApi from "./components/DiagramApi";
 
 :::tip What you’ll learn
-- what does the `api` project application represent
-- the necessary cloud infrastructure resources on which the `api` project application relies on
+
+- what does the **API** project application represent
+- the necessary cloud infrastructure resources on which the **API** project application relies on
 :::
 
 ## Overview
 
-The `api` application represents your project's (GraphQL) API.
+The **API** project application represents your project's HTTP API, whose main purpose is to serve the default Admin Area and Website applications, via a GraphQL interface.
 
-<DiagramApi/>
+But do note that the **API** application represents much more than that. The default Webiny applications not only extend the application's GraphQL schema, but also bring additional processes and cloud infrastructure resources in order to achieve their goal. For example, in order to store and serve files, and optimize images, the File Manager application brings a couple of Lambda functions, and an S3 bucket. Another example is the Page Builder application, which also brings a couple of Lambda functions that deal with prerendering of pages.
+
+Of course, the application can additionally grow in terms of code and cloud infrastructure on your behalf, if need be.
+
+:::info
+Dive deeper by taking a closer look at this project application [in our GitHub repository](https://github.com/webiny/webiny-js/tree/v5/packages/cwp-template-aws/template/api). Note that the provided link is showing both the VPC and non-VPC related files and folder.
+:::
+
+## Diagrams
+
+<DiagramApi />
