fix: reword the question

--- a/docs/key-topics/cloud-infrastructure/components/DiagramApi/content/Overview.mdx
+++ b/docs/key-topics/cloud-infrastructure/components/DiagramApi/content/Overview.mdx
@@ -71,9 +71,9 @@ We started with [Apollo GraphQL Server](https://www.apollographql.com/docs/apoll
 
 By default, we deploy [HTTP APIs](https://docs.aws.amazon.com/apigateway/latest/developerguide/http-api.html). This can be changed on your behalf, if need be.
 
-**In DynamoDB, how is the data structured?**
+**How is the DynamoDB data structured?**
 
-Webiny is following an approach called [single-table design](https://www.alexdebrie.com/posts/dynamodb-single-table/), which advocates for storing all the application data into a single DynamoDB table. All of the Webiny applications are storing data in a single table, with appropriate primary and secondary keys in order to avoid clashing of data.
+Webiny is following an approach called [single-table design](https://www.alexdebrie.com/posts/dynamodb-single-table/), which advocates for storing all the application data in a single DynamoDB table. So, all of the Webiny applications are storing data in a single table, with distinct primary and secondary keys in order to avoid clashing of data.
 
 :::info
 This doesn't mean you have to do the same. Using [Pulumi](/docs/key-topics/deployment/iac-with-pulumi), you can easily deploy separate DynamoDB tables and structure your application's data in any way you want.
