Removed incomplete articles and added a beta notice.

--- a/docs/introduction.mdx
+++ b/docs/introduction.mdx
@@ -10,6 +10,10 @@ slug: webiny/introduction
 import Theme from "./mdxComponents/theme";
 import { Box, Button, Heading, Grid, Link, Badge } from "theme-ui";
 
+:::danger Webiny Beta
+Webiny is currently in a beta stage. The documentation is not yet complete. We're publishing new docs every day and expect to reach the stable release during February. For any questions, please join our [community on slack](http://www.webiny.com/slack).
+:::
+
 <Theme>
 
 Welcome! 👋 **Webiny** is a framework for building applications which run on top of the serverless infrastructure, like AWS Lambda. Webiny also includes several ready-made applications right out of the box.
@@ -20,7 +24,9 @@ Welcome! 👋 **Webiny** is a framework for building applications which run on t
 
 It's easy to get started, just follow the installation tutorial:
 
-<Link href="/docs/tutorials/install-webiny"><Button>Install Webiny</Button></Link>
+<Link href="/docs/tutorials/install-webiny">
+  <Button>Install Webiny</Button>
+</Link>
 
 ---
 
@@ -28,35 +34,17 @@ It's easy to get started, just follow the installation tutorial:
 
 **What's included, and what you can do with Webiny:**
 
-<Grid
-  gap={2}
-  width={[ '100%', '50%', '25%']}>
+<Grid gap={2} width={["100%", "50%", "25%"]}>
   <Box>
-    <p><strong>With Webiny you can build:</strong></p>
+    <p>
+      <strong>With Webiny you can build:</strong>
+    </p>
     <ul>
-        <li>Websites</li>
-        <li>Applications</li>
-        <li>GraphQL APIs</li>
-        <li>Microservices</li>
+      <li>Websites</li>
+      <li>Applications</li>
+      <li>GraphQL APIs</li>
+      <li>Microservices</li>
     </ul>
-  </Box>
-  <Box>
-      <p><strong>Webiny provides you with:</strong></p>
-      <ul>
-          <li>CLI to deploy your projects</li>
-          <li>Admin panel</li>
-          <li>ACL layer</li>
-          <li>Scaffolding templates</li>
-      </ul>
-  </Box>
-  <Box>
-      <p><strong>Webiny apps:</strong></p>
-      <ul>
-          <li>Headless CMS</li>
-          <li>Page Builder</li>
-          <li>Form Builder</li>
-          <li>File Manager</li>
-      </ul>
   </Box>
 </Grid>
 
@@ -69,9 +57,14 @@ It's easy to get started, just follow the installation tutorial:
 
 ## Learn Webiny
 
+:::caution Webiny Beta
+These articles are currently under construction. 🚧
+:::
+
 Your journey to learning Webiny can take a few different paths, depending on your use-case and what you want to do. Here are a few main paths you can choose to take and the suggested resources.
 
 ### Build applications with Webiny
+
 To successfully build apps it's important to know some of the basic concepts and inner workings of Webiny. We've suggest you go through the following set of articles:
 
 - [Plugin system explained](#!) <Badge variant="outline">Key topic</Badge>
@@ -81,8 +74,8 @@ To successfully build apps it's important to know some of the basic concepts and
 - [Create an application](#!) <Badge variant="outline">Tutorial</Badge>
 - [Create a custom permission](#!) <Badge variant="outline">Tutorial</Badge>
 
-
 ### Use the Headless CMS
+
 Webiny Headless CMS comes with a GraphQL API, a UI to model your content and a UI for editors to input records. To successfully adopt the Headless CMS, we recommend the following articles:
 
 - [Create a content model and access the records](#!) <Badge variant="outline">Tutorial</Badge>
@@ -117,6 +110,5 @@ Additionally you can find useful information on our twitter [@WebinyPlatform](ht
 If something is missing in the documentation, or you've found a part that's confusing, please report an [issue to our docs repository](https://github.com/webiny/docs.webiny.com/issues/new).
 
 For any other questions of feedback, please reach out via our [community slack](https://www.webiny.com/slack).
-
 
 </Theme>
