feat: create cloud architecture key topics

--- a/docs/how-to-guides/deployment/preview-deployments.mdx
+++ b/docs/how-to-guides/deployment/preview-deployments.mdx
@@ -1,7 +1,7 @@
 ---
-id: deploy-your-project
-title: Deploy Your Project
-sidebar_label: Deploy Your Project
+id: preview-deployments
+title: Preview Deployments
+sidebar_label: Preview Deployments
 keywords: ["deploy", "project", "application", "cli"]
 description: Learn how to deploy your Webiny project and its project applications, using the Webiny CLI.
 ---
