--- a/docs/key-topics/cloud-infrastructure/components/DiagramApi/content/Overview.mdx
+++ b/docs/key-topics/cloud-infrastructure/components/DiagramApi/content/Overview.mdx
@@ -79,3 +79,8 @@ Webiny is following an approach called [single-table design](https://www.alexdeb
 This doesn't mean you have to do the same. Using [Pulumi](/docs/key-topics/deployment/iac-with-pulumi), you can easily deploy separate DynamoDB tables and structure your application's data in any way you want.
 :::
 
+**Is Amazon ElasticSearch Service <diagram-letter>g</diagram-letter> deployed into multiple AZs?**
+
+Currently it is deployed into a single AZ, just for cost reasons. But yes, production workloads should use two or three AZs. Check out the [Amazon ElasticSearch Service's FAQ page](https://aws.amazon.com/elasticsearch-service/faqs/) for more information.
+
+Deploying the Amazon ElasticSearch Service <diagram-letter>g</diagram-letter> into multiple AZs can be achieved by adjusting [the cloud infrastructure code](https://github.com/webiny/webiny-js/blob/v5/packages/cwp-template-aws/template/api/pulumi_no_vpc/elasticSearch.ts#L9).
