--- a/docs/key-topics/cloud-infrastructure/website.mdx
+++ b/docs/key-topics/cloud-infrastructure/website.mdx
@@ -22,16 +22,16 @@ The **Website** project application represents your public website.
 
 In terms of the code the application holds, essentially, we're talking about a classic React application that renders pages created using the Page Builder application.
 
-In terms of the necessary cloud infrastructure, things are not as simple as it's the case with the [Admin Area](/docs/key-topics/cloud-infrastructure/admin) project application. Basically, public websites do not work well if they are served as a classic React single-page-application (SPA) and that's fully relying on the client-side rendering approach.
-
-:::info
-Learn more about different rendering approaches in [this article](https://developers.google.com/web/updates/2019/02/rendering-on-the-web) published by Google.
-:::
+In terms of the necessary cloud infrastructure, things are not as simple as it's the case with the [Admin Area](/docs/key-topics/cloud-infrastructure/admin) project application. Basically, public websites do not work well if they are served as a classic React single-page-application (SPA) that's relying on the client-side rendering approach.
 
 This is because of the following two factors:
 
 1. UX is not good because every time a user opens a page, he's presented with a loading screen.
 2. SEO suffers significantly. Search engines and web crawlers are still having problems interpreting the dynamically generated HTML, and some are not supporting this at all.
+
+:::info
+Learn more about different rendering approaches in [this article](https://developers.google.com/web/updates/2019/02/rendering-on-the-web) published by Google.
+:::
 
 Because of this, Webiny developed its own **Prerendering Service**, which prerenders your website pages. In other words, when a page is published, it captures the complete HTML code and relevant data for it in advance. And, when an actual website visitors visits one of your pages, the page is just served as a simple static HTML file, with the page data directly embedded in it. This approach resolves both of the issues mentioned above.
 
