feat: create cloud architecture key topics

--- a/docs/key-topics/cloud-infrastructure/api.mdx
+++ b/docs/key-topics/cloud-infrastructure/api.mdx
@@ -18,9 +18,9 @@ import DiagramApi from "./components/DiagramApi";
 
 ## Overview
 
-The **API** project application represents your project's HTTP API, whose main purpose is to serve the default Admin Area and Website applications, via a GraphQL interface.
+The **API** project application represents your project's HTTP API, whose main purpose is to serve the default **Admin Area** and **Website applications**, via a GraphQL interface.
 
-But do note that the **API** application represents much more than that. The default Webiny applications not only extend the application's GraphQL schema, but also bring additional processes and cloud infrastructure resources in order to achieve their goal. For example, in order to store and serve files, and optimize images, the File Manager application brings a couple of Lambda functions, and an S3 bucket. Another example is the Page Builder application, which also brings a couple of Lambda functions that deal with prerendering of pages.
+But do note that the **API** application represents much more than a GraphQL interface. The default Webiny applications not only extend the application's GraphQL schema, but also bring additional processes and cloud infrastructure resources in order to achieve their goal. For example, in order to store and serve files, and optimize images, the File Manager application brings a couple of dedicated Lambda functions, and an S3 bucket. Another example is the Page Builder application, which also brings a couple of dedicated Lambda functions that deal with prerendering of pages.
 
 Of course, the application can additionally grow in terms of code and cloud infrastructure on your behalf, if need be.
 
