--- a/docs/key-topics/cloud-infrastructure/components/DiagramApi/content/Overview.mdx
+++ b/docs/key-topics/cloud-infrastructure/components/DiagramApi/content/Overview.mdx
@@ -1,6 +1,12 @@
 ## Description
 
-The diagram gives an overview of the complete cloud infrastructure needed by the Webiny applications that come set up by default with every new Webiny project, which together form the **API** project application. The Webiny applications in question are:
+The diagram gives an overview of the complete cloud infrastructure needed by the Webiny applications that come set up by default with every new Webiny project, which together form the **API** project application.
+
+:::info
+All of the shown cloud infrastructure resources are deployed into a single AWS region, which is defined by you.
+:::
+
+The Webiny applications in question are:
 
 1. Security
 2. I18N
