--- a/docs/key-topics/cloud-infrastructure/introduction.mdx
+++ b/docs/key-topics/cloud-infrastructure/introduction.mdx
@@ -19,17 +19,17 @@ By default, a Webiny project contains three [project applications](/docs/key-top
 
 <!-- vale off -->
 
-1. **api** (`./api`) - your project's GraphQL API
-2. **admin** (`./apps/admin`) - admin area
-3. **website** (`./apps/website`) - public website
-   <!-- vale on -->
+1. **API** (`./api`) - your project's GraphQL API
+2. **Admin Area** (`./apps/admin`) - your administration area
+3. **Website** (`./apps/website`) - your public website
+<!-- vale on -->
 
 In order for these applications to actually work, a set of cloud infrastructure resources needs to be deployed into the cloud (your AWS account).
 
-If we wanted to compare these applications by the complexity of needed cloud infrastructure, we could say that **api** is the most complex one. This is simply because it requires the biggest number of different cloud infrastructure resources in order for it to work. On the other hand, the **admin** and **website** project applications basically just represent React applications, and to host these, we only need a couple of different cloud infrastructure resources.
+If we wanted to compare these applications by the complexity of needed cloud infrastructure, we could say that the **API** is the most complex one. This is simply because it requires the biggest number of different cloud infrastructure resources in order for it to work. On the other hand, the **Admin Area** and **Website** project applications basically just represent React applications, and to host these, we only need a couple of different cloud infrastructure resources.
 
 :::info
 Visit the [Deployments](/docs/key-topics/deployment/introduction) key topics section to learn more about how Webiny approaches cloud infrastructure deployment.
 :::
 
-In the following sections, we are examining what cloud infrastructure resources get deployed for each application, how they are working together, different configurations, the overall cost, and so on.
+In the following sections, we examine which cloud infrastructure resources get deployed for each project application, how they are working together, different configurations, and other related information.
