fix: correct typo

--- a/docs/how-to-guides/deployment/destroy-your-project.mdx
+++ b/docs/how-to-guides/deployment/destroy-your-project.mdx
@@ -14,15 +14,15 @@ description: Learn how to destroy your Webiny project and its project applicatio
 
 ## Introduction
 
-Webiny makes it easy to destroy your project, using the [Webiny CLI](/docs/key-topics/webiny-cli) and [Pulumi](/docs/key-topics/destroyment/iac-with-pulumi) as the default infrastructure as code and destroyment solution. You can also easily destroy your project into multiple [environments](/docs/key-topics/destroyment/environments), which is covered in this guide as well.
+Webiny makes it easy to destroy your project, using the [Webiny CLI](/docs/key-topics/webiny-cli) and [Pulumi](/docs/key-topics/deployment/iac-with-pulumi) as the default infrastructure as code and deployment solution. You can also easily destroy your project into multiple [environments](/docs/key-topics/deployment/environments), which is covered in this guide as well.
 
 :::info
-To learn more about project organization, check out the [Project organisation](/docs/key-topics/project-organization) and [Project Applications](/docs/key-topics/project-applications) key topics. To learn more about destroyments in general, check out the [Destroyment](/docs/key-topics/destroyment/introduction) key topics section.
+To learn more about project organization, check out the [Project organisation](/docs/key-topics/project-organization) and [Project Applications](/docs/key-topics/project-applications) key topics. To learn more about deployments in general, check out the [Deployment](/docs/key-topics/deployment/introduction) key topics section.
 :::
 
 ## Before we begin
 
-Before we begin, it's worth mentioning that the destroyment commands shown below also build your application code. They perform this task by just running the following **workspaces** command:
+Before we begin, it's worth mentioning that the deployment commands shown below also build your application code. They perform this task by just running the following **workspaces** command:
 
 ```
 yarn webiny workspaces run build --folder {STACK_FOLDER}
@@ -32,7 +32,7 @@ The command first finds all packages that are located in the project application
 
 ## The `destroy` command
 
-As explained in the [introduction to destroyment](/docs/key-topics/destroyment/introduction) key topic, doing a complete project destroyment entails destroying all of its project applications.
+As explained in the [introduction to deployment](/docs/key-topics/deployment/introduction) key topic, doing a complete project deployment entails destroying all of its project applications.
 
 To make it a bit easier for new users, Webiny CLI provides the `destroy` command, which destroys all of the three applications that are by default included in a Webiny project. It destroys them in the following order:
 
@@ -42,14 +42,14 @@ To make it a bit easier for new users, Webiny CLI provides the `destroy` command
 3. **apps/site**
 <!-- vale on -->
 
-So, to do a complete destroyment of your Webiny project, in your terminal of choice, and in your project root, execute the following command:
+So, to do a complete deployment of your Webiny project, in your terminal of choice, and in your project root, execute the following command:
 
 ```
 yarn webiny destroy
 ```
 
 :::info
-Note that the first destroyment can take up to 20 minutes! So even though it might look like nothing is happening in the terminal, please be patient and let the process finish. If something went wrong, an error will be shown, and the process will exit with an appropriate error code.
+Note that the first deployment can take up to 20 minutes! So even though it might look like nothing is happening in the terminal, please be patient and let the process finish. If something went wrong, an error will be shown, and the process will exit with an appropriate error code.
 :::
 
 ### Different environments
@@ -61,7 +61,7 @@ yarn webiny destroy --env prod
 
 ### Limitations
 
-As mentioned, the `destroy` command is made for new users, making the initial destroyment as easy as possible. In that sense, you need to be aware of a couple of limitations of this command.
+As mentioned, the `destroy` command is made for new users, making the initial deployment as easy as possible. In that sense, you need to be aware of a couple of limitations of this command.
 
 #### 1. Destroys everything
 With this command, you cannot pick a specific project application you wish to destroy. It's all or nothing.
@@ -71,7 +71,7 @@ This can become problematic. If changes were made to just one application, which
 To avoid destroying your whole project, use the `app destroy` command (explained below).
 
 #### 2. Only works with default project applications
-The moment you start adding more applications to your project and your project starts growing, you will need to come up with your own command for complete project destroyment. It's either that, or you'll need to rely on the `app destroy` command to separately destroy your applications. This is simply because Webiny [cannot predict](/docs/key-topics/destroyment/introduction#dependent-project-applications) which project applications need to be destroyed and in what order.
+The moment you start adding more applications to your project and your project starts growing, you will need to come up with your own command for complete project deployment. It's either that, or you'll need to rely on the `app destroy` command to separately destroy your applications. This is simply because Webiny [cannot predict](/docs/key-topics/deployment/introduction#dependent-project-applications) which project applications need to be destroyed and in what order.
 
 Still, if you aren't about to add new project applications and maybe you just end up expanding the default ones, then the `destroy` command will most probably serve you well.
 
