--- a/docs/how-to-guides/deployment/destroy-your-project.mdx
+++ b/docs/how-to-guides/deployment/destroy-your-project.mdx
@@ -1,98 +1,42 @@
 ---
 id: destroy-your-project
-title: Destroy Your Project
-sidebar_label: Destroy Your Project
+title: Destroy Cloud Infrastructure
+sidebar_label: Destroy Cloud Infrastructure
 keywords: ["destroy", "project", "application", "cli"]
 description: Learn how to destroy your Webiny project and its project applications, using the Webiny CLI.
 ---
 
 :::tip What you’ll learn
-
-- how to destroy your project into multiple environments
-- how to destroy project applications into multiple environments
+- how to destroy cloud infrastructure deployed by project applications, possibly into multiple environments
 :::
-
-## Introduction
-
-Webiny makes it easy to destroy your project, using the [Webiny CLI](/docs/key-topics/webiny-cli) and [Pulumi](/docs/key-topics/deployment/iac-with-pulumi) as the default infrastructure as code and deployment solution. You can also easily destroy your project into multiple [environments](/docs/key-topics/deployment/environments), which is covered in this guide as well.
-
-:::info
-To learn more about project organization, check out the [Project organisation](/docs/key-topics/project-organization) and [Project Applications](/docs/key-topics/project-applications) key topics. To learn more about deployments in general, check out the [Deployment](/docs/key-topics/deployment/introduction) key topics section.
-:::
-
-## Before we begin
-
-Before we begin, it's worth mentioning that the deployment commands shown below also build your application code. They perform this task by just running the following **workspaces** command:
-
-```
-yarn webiny workspaces run build --folder {STACK_FOLDER}
-```
-
-The command first finds all packages that are located in the project application folder. Then, for every found package, it runs the `build` command that's specified in the `webiny.config.js` - a configuration file that every package possesses. If the `build` command is defined, it gets executed, otherwise, the process just continues with the next package.
 
 ## The `destroy` command
 
-As explained in the [introduction to deployment](/docs/key-topics/deployment/introduction) key topic, doing a complete project deployment entails destroying all of its project applications.
+To make it a bit easier for users that are just testing Webiny or want to quickly destroy all of the deployed cloud infrastructure, Webiny CLI provides the `destroy` command, which destroys all of the cloud infrastructure, deployed by the three applications that are by default included in a Webiny project.
 
-To make it a bit easier for new users, Webiny CLI provides the `destroy` command, which destroys all of the three applications that are by default included in a Webiny project. It destroys them in the following order:
-
-<!-- vale off -->
-1. **api**
-2. **apps/admin**
-3. **apps/site**
-<!-- vale on -->
-
-So, to do a complete deployment of your Webiny project, in your terminal of choice, and in your project root, execute the following command:
+To destroy all deployed cloud infrastructure, in your terminal of choice, and in your project root, execute the following command:
 
 ```
 yarn webiny destroy
 ```
 
-:::info
-Note that the first deployment can take up to 20 minutes! So even though it might look like nothing is happening in the terminal, please be patient and let the process finish. If something went wrong, an error will be shown, and the process will exit with an appropriate error code.
-:::
-
 ### Different environments
-In general, when destroying projects or project applications, an environment must be specified. The `destroy` command destroys your project into the `dev` environment by default, but you can also specify a different environment with the `--env` argument. For example, to destroy your project into the `prod` environment, you can run the following command:
+The `destroy` command destroys the cloud infrastructure that was deployed into the `dev` environment by default. You can specify a different environment with the `--env` argument. For example, to destroy cloud infrastructure that was deployed into the `prod` environment, you can run the following command:
 
 ```
 yarn webiny destroy --env prod
 ```
 
-### Limitations
-
-As mentioned, the `destroy` command is made for new users, making the initial deployment as easy as possible. In that sense, you need to be aware of a couple of limitations of this command.
-
-#### 1. Destroys everything
-With this command, you cannot pick a specific project application you wish to destroy. It's all or nothing.
-
-This can become problematic. If changes were made to just one application, which now needs to be destroyed, you probably don't want to destroy your whole project. Destroying this single application will suffice in most cases.
-
-To avoid destroying your whole project, use the `app destroy` command (explained below).
-
-#### 2. Only works with default project applications
-The moment you start adding more applications to your project and your project starts growing, you will need to come up with your own command for complete project deployment. It's either that, or you'll need to rely on the `app destroy` command to separately destroy your applications. This is simply because Webiny [cannot predict](/docs/key-topics/deployment/introduction#dependent-project-applications) which project applications need to be destroyed and in what order.
-
-Still, if you aren't about to add new project applications and maybe you just end up expanding the default ones, then the `destroy` command will most probably serve you well.
-
 ## The `app destroy` command
 
-This command lets you destroy your project in a more granular way, by enabling you to destroy a single project application. This can be handy if you want to avoid destroying your whole project, which is one of the caveats of the shown `destroy` command.
+This command lets you destroy cloud infrastructure deployed by a single project application. This can be handy if you want to avoid completely destroying all cloud infrastructure that was deployed by the default project applications, which is what the above shown `destroy` command does.
 
-As its first argument, the `app destroy` command receives the path to the application folder. You also need to specify the environment in which you want to destroy it, which is specified via the `--env` argument. Note that, unlike with the `destroy` command, the `--env` argument is not optional and it needs to be provided explicitly.
+As its first argument, the `app destroy` command receives the path to the project application folder. You also need to specify the environment in which the cloud infrastructure was previously deployed, which is specified via the `--env` argument. Note that, unlike with the `destroy` command, the `--env` argument is not optional and it needs to be provided explicitly.
 
-The following destroy commands destroy three different applications, all into the `dev` environment:
+The following destroy commands destroy cloud infrastructure deployed for three project applications, all previously deployed into the `dev` environment:
 
 ```
 yarn webiny app destroy api --env dev
 yarn webiny app destroy apps/admin --env dev
 yarn webiny app destroy apps/site --env dev
 ```
-
-
-
-## FAQ
-
-**Is there a built-in command that destroys the whole project?**
-
-At the moment, there is not. To destroy the whole project, run separate `webiny app destroy` commands on each project application.
