feat: add Destroy Your Project guide

--- a/docs/how-to-guides/deployment/destroy-your-project.mdx
+++ b/docs/how-to-guides/deployment/destroy-your-project.mdx
@@ -20,6 +20,10 @@ To destroy all deployed cloud infrastructure, in your terminal of choice, and in
 yarn webiny destroy
 ```
 
+:::danger
+Although this may seem as a convenient way to get rid of everything that was previously deployed, be cautious when using this command. Once cloud infrastructure is destroyed, in most cases, it cannot be brought back, which means you could potentially loose your data, files, and similar.
+:::
+
 ### Different environments
 The `destroy` command destroys the cloud infrastructure that was deployed into the `dev` environment by default. You can specify a different environment with the `--env` argument. For example, to destroy cloud infrastructure that was deployed into the `prod` environment, you can run the following command:
 
@@ -29,7 +33,7 @@ yarn webiny destroy --env prod
 
 ## The `app destroy` command
 
-This command lets you destroy cloud infrastructure deployed by a single project application. This can be handy if you want to avoid completely destroying all cloud infrastructure that was deployed by the default project applications, which is what the above shown `destroy` command does.
+This command lets you destroy cloud infrastructure previously deployed by a single project application. This can be handy if you want to avoid completely destroying all cloud infrastructure that was deployed by the default project applications, which is what the shown `destroy` command does.
 
 As its first argument, the `app destroy` command receives the path to the project application folder. You also need to specify the environment in which the cloud infrastructure was previously deployed, which is specified via the `--env` argument. Note that, unlike with the `destroy` command, the `--env` argument is not optional and it needs to be provided explicitly.
 
