fix: correct grammar

--- a/docs/key-topics/cloud-infrastructure/admin.mdx
+++ b/docs/key-topics/cloud-infrastructure/admin.mdx
@@ -20,7 +20,7 @@ import DiagramAdmin from "./components/DiagramAdmin";
 
 The **Admin Area** project application represents, as the name itself suggests, your administration area, which is a simple React single-page-application (SPA).
 
-With only two cloud infrastructure resources, the Amazon CloudFront and Amazon S3, hosting single page applications is simple and most importantly, cost-effective.
+With only two cloud infrastructure resources, the Amazon CloudFront and Amazon S3, hosting single page applications is simple, and most importantly, cost-effective.
 
 :::info
 Dive deeper by taking a closer look at this project application [in our GitHub repository](https://github.com/webiny/webiny-js/tree/v5/packages/cwp-template-aws/template/api).
