--- a/docs/key-topics/cloud-infrastructure/components/DiagramAdmin/content/PageVisit.mdx
+++ b/docs/key-topics/cloud-infrastructure/components/DiagramAdmin/content/PageVisit.mdx
@@ -1,6 +1,8 @@
 ## Description
 
-The diagram shows how HTTP requests travel through the deployed cloud infrastructure and how files are returned back to the client. This happens repeatedly as the user opens and navigates through the **Admin Area** React application. Note that, when talking about the API HTTP requests (GraphQL queries and mutations) that the **Admin Area** React application issues, those are still issued to the Amazon CloudFront distribution that's deployed as part of the [API project application](/docs/key-topics/cloud-infrastructure/api).
+<!-- vale off -->
+The diagram shows how HTTP requests travel through the deployed cloud infrastructure and how files are returned back to the client. This happens repeatedly as the user opens and navigates through the **Admin Area** React application. Note that, when talking about the API HTTP requests that the **Admin Area** React application issues, those are still issued to the Amazon CloudFront distribution that's deployed as part of the [API project application](/docs/key-topics/cloud-infrastructure/api).
+<!-- vale on -->
 
 ## Steps
 
