--- a/docs/key-topics/cloud-infrastructure/components/DiagramApi/content/GqlRequest.mdx
+++ b/docs/key-topics/cloud-infrastructure/components/DiagramApi/content/GqlRequest.mdx
@@ -1,6 +1,6 @@
 ## Description
 
-The diagram shows what happens every time a GraphQL query or mutation (an HTTP request) gets issued by the client, for example, the **Admin Area** or **Website** applications.
+The diagram shows what happens every time a GraphQL query or mutation (an HTTP request) gets issued by the client, for example, the **Admin Area**, or **Website** applications.
 
 ## Steps
 
