--- a/docs/key-topics/cloud-infrastructure/components/DiagramApi/content/Overview.mdx
+++ b/docs/key-topics/cloud-infrastructure/components/DiagramApi/content/Overview.mdx
@@ -1,9 +1,9 @@
 ## Description
 
-The diagram gives an overview of the complete cloud infrastructure needed by the Webiny applications that come set up by default with every new Webiny project, which together form the **API** project application.
+The diagram gives an overview of the complete cloud infrastructure that is deployed by default Webiny applications, which together form the **API** project application.
 
 :::info
-All of the shown cloud infrastructure resources are deployed into a single AWS region, which is defined by you.
+All of the shown cloud infrastructure resources are deployed into a single AWS region, which is defined by you. Check out the [AWS Regions and Profiles](/docs/how-to-guides/deployment/aws-regions-profiles) guide for more information.
 :::
 
 The Webiny applications in question are:
@@ -33,7 +33,7 @@ For storing data, the application relies on Amazon DynamoDB <diagram-letter>F</d
 
 #### 3. File Manager
 
-Besides expanding the GraphQL schema located on the GraphQL Server Lambda function, the File Manager application also brings a couple of Lambda functions for performing file uploads and downloads and also image optimizations. It also brings a single Amazon S3 bucket, in which the files are ultimately stored <diagram-letter>H</diagram-letter>.
+Besides expanding the GraphQL schema located on the GraphQL Server Lambda function <diagram-letter>c</diagram-letter>, the File Manager application also brings a couple of dedicated Lambda functions. These perform various file-related tasks like uploading, downloading, and also image optimizations. It also brings a single Amazon S3 bucket, in which the files are ultimately stored <diagram-letter>H</diagram-letter>.
 
 For storing data and performing search queries, the application relies on Amazon DynamoDB <diagram-letter>F</diagram-letter> and Amazon ElasticSearch Service <diagram-letter>G</diagram-letter>, respectively.
 
@@ -61,13 +61,15 @@ For storing data and performing search queries, the application relies on Amazon
 
 There are a couple of reason for that.
 
-First, implementing a GraphQL server using AWS Lambda enables us and our users to make additional customizations to server's behaviour.
+First, implementing a GraphQL server using AWS Lambda enables us and our users to make additional customizations to server's behavior.
 
 The default Webiny applications rely on this fact as well. For example, the I18N application gives you the ability to check what is the current locale that the user is on. The Security application gives you the ability to perform custom authentication and authorization checks inside of your resolvers. Finally, it also makes it possible for the Headless CMS application to generate different GraphQL schemas, based on the current I18N locale.
 
 Secondly, you can test your GraphQL server easily with Jest, as you would do with any other JavaScript piece of code.
 
-And finally, this approach makes it much easier for Webiny to be hosted on not just one cloud infrastructure provider (AWS), but on many more, like Microsoft Azure or Google Cloud Platform.
+<!-- vale off -->
+Finally, this approach makes it much easier for Webiny to be hosted on not just one cloud infrastructure provider (AWS), but on many more, like Microsoft Azure or Google Cloud Platform.
+<!-- vale on -->
 
 **Which GraphQL implementation are you using?**
 
@@ -79,7 +81,7 @@ By default, we deploy [HTTP APIs](https://docs.aws.amazon.com/apigateway/latest/
 
 **How is the DynamoDB data structured?**
 
-Webiny is following an approach called [single-table design](https://www.alexdebrie.com/posts/dynamodb-single-table/), which advocates for storing all the application data in a single DynamoDB table. So, all of the Webiny applications are storing data in a single table, with distinct primary and secondary keys in order to avoid clashing of data.
+Webiny is following the approach called [single-table design](https://www.alexdebrie.com/posts/dynamodb-single-table/), which advocates for storing all the application data in a single DynamoDB table. So all of the Webiny applications are storing data in a single table, with distinct primary and secondary keys in order to avoid clashing of data.
 
 :::info
 This doesn't mean you have to do the same. Using [Pulumi](/docs/key-topics/deployment/iac-with-pulumi), you can easily deploy separate DynamoDB tables and structure your application's data in any way you want.
