--- a/docs/key-topics/cloud-infrastructure/components/DiagramApi/content/OverviewVpc.mdx
+++ b/docs/key-topics/cloud-infrastructure/components/DiagramApi/content/OverviewVpc.mdx
@@ -25,8 +25,7 @@ Virtual Private Clouds (VPCs) is a topic that requires some general networking k
 
 ## Key Differences
 
-
-The shown diagram gives an overview of which cloud infrastructure resources are deployed when the VPC option was chosen during the creation of a new Webiny project. Essentially, resources still work and communicate with each other in the same way, except this time, there are a couple of additional network-level resources and rules in place, which help in improving your project's overall security posture.
+The shown diagram gives an overview of which cloud infrastructure resources are deployed when the VPC option was chosen during the creation of a new Webiny project. Essentially, resources still work and communicate with each other in the same way, except this time, there are a couple of additional network-level resources, and rules in place. This helps in improving your project's overall security posture.
 
 #### Public and private subnets
 The most prominent change, when compared to the default-VPC option, is the inclusion of a VPC that consists of three subnets - one public <diagram-letter>C</diagram-letter> and two private <diagram-letter>D</diagram-letter> <diagram-letter>e</diagram-letter>, deployed across multiple availability zones (AZs).
@@ -46,13 +45,13 @@ If this presents a problem, you may want to integrate a different solution, like
 
 #### Multiple Availability Zones
 
-As mentioned, the public and private subnets are deployed across multiple availability zones (AZs). This helps in making your application more highly available, fault tolerant and scalable. For example, if in a single region, one of the AZs goes offline, all of the network traffic is essentially routed to other AZs that are online, thus your application still works.
+As mentioned, the public and private subnets are deployed across multiple availability zones (AZs). This helps in making your application more highly available, fault tolerant and scalable. For example, if in a single region, one of the AZs goes offline, all of the network traffic is essentially routed to other AZs that are online. This means your application still works.
 
 :::danger Additional cost
 Hosting your application in multiple availability zones may incur additional cost, since some of the cloud infrastructure resources get deployed multiple times. For example, this is true for Amazon ElasticSearch Service <diagram-letter>h</diagram-letter>. In contrast, this is not true for Lambda functions deployed into multiple AZs.
 :::
 
-Note that the number of distinct AZs depends on the region you're deploying to as some only have 2 AZs. And since the public subnet is deployed into the default AZ, the number of distinct AZs also depends on which default AZ was chosen for you (by AWS) in the process of deployment.
+Note that the number of distinct AZs depends on the region you're deploying to as some only have 2 AZs. And, since the public subnet is deployed into the default AZ, the number of distinct AZs also depends on which default AZ was picked for you. This is picked by AWS, upon deploying your project application for the first time into the defined environment.
 
 ## FAQ
 
