--- a/docs/key-topics/cloud-infrastructure/components/DiagramWebsite/content/Overview.mdx
+++ b/docs/key-topics/cloud-infrastructure/components/DiagramWebsite/content/Overview.mdx
@@ -1,6 +1,8 @@
 ## Description
 
-The diagram gives an overview of the complete cloud infrastructure that's needed to host the **Website** project application and, in combination with the **API** project application, makes prerendering of pages possible.
+<!-- vale off -->
+The diagram gives an overview of the complete cloud infrastructure that's needed to host the **Website** project application and, in combination with the **API** project application, that makes prerendering of pages possible.
+<!-- vale on -->
 
 As we can see, the cloud infrastructure consists of five resources - two Amazon CloudFront distributions <diagram-letter>A</diagram-letter> <diagram-letter>D</diagram-letter>, two Amazon S3 buckets <diagram-letter>B</diagram-letter> <diagram-letter>C</diagram-letter>, and the **API** project application.
 
