--- a/docs/key-topics/cloud-infrastructure/website.mdx
+++ b/docs/key-topics/cloud-infrastructure/website.mdx
@@ -26,14 +26,14 @@ In terms of the necessary cloud infrastructure, things are not as simple as it's
 
 This is because of the following two factors:
 
-1. UX is not good because every time a user opens a page, he's presented with a loading screen.
+1. UX is not good because every time a users open a webpage, they are presented with a loading screen.
 2. SEO suffers significantly. Search engines and web crawlers are still having problems interpreting the dynamically generated HTML, and some are not supporting this at all.
 
 :::info
 Learn more about different rendering approaches in [this article](https://developers.google.com/web/updates/2019/02/rendering-on-the-web) published by Google.
 :::
 
-Because of this, Webiny developed its own **Prerendering Service**, which prerenders your website pages. In other words, when a page is published, it captures the complete HTML code and relevant data for it in advance. And, when an actual website visitors visits one of your pages, the page is just served as a simple static HTML file, with the page data directly embedded in it. This approach resolves both of the issues mentioned above.
+Because of this, Webiny developed its own **Prerendering Service**, which prerenders your website pages. In other words, when a page is published, it captures the complete HTML code, and relevant data for it in advance. And, when an actual website visitors visits one of your pages, the page is just served as a simple static HTML file, with the page data directly embedded in it. This approach resolves both of the issues mentioned above.
 
 :::tip
 The explanation on prerendering of pages, presented above, is a very brief one. This is intentional, as this key topic is focused on the cloud infrastructure Webiny deploys and not on the prerendering itself. If you want to learn more about how the Page Builder application handles page rendering, visit the [Prerendering Pages](/docs/key-topics/page-builder/prerendering-pages) key topic.
