fix: correct keywords and descriptions

--- a/docs/key-topics/cloud-infrastructure/introduction.mdx
+++ b/docs/key-topics/cloud-infrastructure/introduction.mdx
@@ -2,8 +2,8 @@
 id: introduction
 title: Introduction
 sidebar_label: Introduction
-keywords: ["cloud", "infrastructure", "vpc", "lambda", "database", "s3", "storage", "diagram"]
-description: Cloud Infrastructure
+keywords: ["cloud", "infrastructure", "introduction", "vpc", "lambda", "database", "s3", "storage", "diagram"]
+description: Introduction to the Cloud Infrastructure key topic, which explains everything related to the cloud infrastructure Webiny relies on.
 ---
 
 import Theme from "../../mdxComponents/theme";
