--- a/docs/key-topics/cloud-infrastructure/admin.mdx
+++ b/docs/key-topics/cloud-infrastructure/admin.mdx
@@ -2,8 +2,8 @@
 id: admin
 title: Admin Area
 sidebar_label: Admin Area
-keywords: ["cloud", "infrastructure", "vpc", "lambda", "database", "s3", "storage", "diagram"]
-description: Cloud Infrastructure
+keywords: ["cloud", "infrastructure", "vpc", "admin", "administration", "lambda", "database", "s3", "storage", "diagram"]
+description: Learn about the necessary cloud infrastructure resources on which the Admin Area project application relies on.
 ---
 
 import Theme from "../../mdxComponents/theme";
