--- a/docs/key-topics/cloud-infrastructure/api.mdx
+++ b/docs/key-topics/cloud-infrastructure/api.mdx
@@ -2,8 +2,8 @@
 id: api
 title: API
 sidebar_label: API
-keywords: ["cloud", "infrastructure", "vpc", "lambda", "database", "s3", "storage", "diagram"]
-description: Cloud Infrastructure
+keywords: ["cloud", "infrastructure", "api", "vpc", "lambda", "database", "s3", "storage", "diagram"]
+description: Learn about the necessary cloud infrastructure resources on which the API project application relies on.
 ---
 
 import Theme from "../../mdxComponents/theme";
