--- a/docs/key-topics/cloud-infrastructure/website.mdx
+++ b/docs/key-topics/cloud-infrastructure/website.mdx
@@ -2,8 +2,8 @@
 id: website
 title: Website
 sidebar_label: Website
-keywords: ["cloud", "infrastructure", "vpc", "lambda", "database", "s3", "storage", "diagram"]
-description: Cloud Infrastructure
+keywords: ["cloud", "infrastructure", "vpc", "website", "lambda", "database", "s3", "storage", "diagram"]
+description: Learn about the necessary cloud infrastructure resources on which the Website project application relies on.
 ---
 
 import Theme from "../../mdxComponents/theme";
