fix: replace `cli` with `CLI`

--- a/docs/how-to-guides/deployment/aws-regions-profiles.mdx
+++ b/docs/how-to-guides/deployment/aws-regions-profiles.mdx
@@ -2,7 +2,7 @@
 id: aws-regions-profiles
 title: AWS Regions and Profiles
 sidebar_label: AWS Regions and Profiles
-keywords: ["deploy", "project", "application", "cli"]
+keywords: ["deploy", "project", "application", "CLI"]
 description: Learn how to deploy your Webiny project and its project applications, using the Webiny CLI.
 ---
 
