--- a/docs/how-to-guides/deployment/destroy-your-project.mdx
+++ b/docs/how-to-guides/deployment/destroy-your-project.mdx
@@ -2,7 +2,7 @@
 id: destroy-your-project
 title: Destroy Cloud Infrastructure
 sidebar_label: Destroy Cloud Infrastructure
-keywords: ["destroy", "project", "application", "cli"]
+keywords: ["destroy", "project", "application", "CLI"]
 description: Learn how to destroy your Webiny project and its project applications, using the Webiny CLI.
 ---
 
