--- a/docs/how-to-guides/deployment/preview-deployments.mdx
+++ b/docs/how-to-guides/deployment/preview-deployments.mdx
@@ -2,7 +2,7 @@
 id: preview-deployments
 title: Preview Deployments
 sidebar_label: Preview Deployments
-keywords: ["deploy", "project", "application", "cli"]
+keywords: ["deploy", "project", "application", "CLI"]
 description: Learn how to deploy your Webiny project and its project applications, using the Webiny CLI.
 ---
 
