--- a/docs/how-to-guides/deployment/deploy-your-project.mdx
+++ b/docs/how-to-guides/deployment/deploy-your-project.mdx
@@ -2,7 +2,7 @@
 id: deploy-your-project
 title: Deploy Your Project
 sidebar_label: Deploy Your Project
-keywords: ["deploy", "project", "application", "cli"]
+keywords: ["deploy", "project", "application", "CLI"]
 description: Learn how to deploy your Webiny project and its project applications, using the Webiny CLI.
 ---
 
