fix: add "what you'll learn"

--- a/docs/key-topics/cloud-infrastructure/introduction.mdx
+++ b/docs/key-topics/cloud-infrastructure/introduction.mdx
@@ -10,7 +10,7 @@ import Theme from "../../mdxComponents/theme";
 import { Box, Button, Grid, Link } from "theme-ui";
 
 :::tip What you’ll learn
-- something
+- what are the default project applications, included in a newly created Webiny project
 :::
 
 ## Overview
