fix: remove old text

--- a/docs/key-topics/webiny-cli.mdx
+++ b/docs/key-topics/webiny-cli.mdx
@@ -9,7 +9,5 @@ description: Cloud Infrastructure
 import Theme from "../mdxComponents/theme";
 import { Box, Button, Grid, Link } from "theme-ui";
 
-This key topic covers stacks, which are an important part of every Webiny project. In the end, you learn how stacks are structured, how you can update a stack, and ultimately, deploy it.
-
----
+Work in progress.
 
