fix: add links to new Cloud Infrastructure section

--- a/docs/key-topics/deployment/introduction.mdx
+++ b/docs/key-topics/deployment/introduction.mdx
@@ -28,6 +28,10 @@ Essentially, deploying your project entails the deployment of necessary cloud in
 
 Whatever the case, Webiny makes it easy to both build and deploy your project, using the [Webiny CLI](/docs/key-topics/webiny-cli) and [Pulumi](/docs/key-topics/deployment/iac-with-pulumi) as the default infrastructure as code and deployment solution. Additionally, without any special configuration, you can also easily deploy your project into multiple [environments](/docs/key-topics/deployment/environments).
 
+:::info Cloud Infrastructure
+After a new Webiny project was set up, the next step is to deploy it. Learn what gets deployed into the cloud (your AWS account) and how it all works in the [Cloud Infrastructure](/docs/key-topics/cloud-infrastructure/introduction) key topics section.
+:::
+
 ## Deploying project applications - not projects
 
 As explained in the [project organisation](/docs/key-topics/project-organization) section, every Webiny project can consist of one or more project applications. Furthermore, every project application consists of [application code and the necessary infrastructure](/docs/key-topics/project-applications) that's needed in order to run it.
