--- a/docs/tutorials/install-webiny.mdx
+++ b/docs/tutorials/install-webiny.mdx
@@ -57,6 +57,10 @@ On the other hand, if we're talking about production deployment, then deploying 
 If you're still not sure what to choose, go for the no-VPC setup. If needed, you can still do the switch down the road.
 :::
 
+:::info Cloud Infrastructure
+Learn what gets deployed into the cloud (your AWS account) and how it all works in the [Cloud Infrastructure](/docs/key-topics/cloud-infrastructure/introduction) key topics section.
+:::
+
 ## First deployment
 
 Once your new project has been created, it's time to deploy it to your AWS account.
