--- a/docs/key-topics/cloud-infrastructure/components/DiagramWebsite/content/Prerendering.mdx
+++ b/docs/key-topics/cloud-infrastructure/components/DiagramWebsite/content/Prerendering.mdx
@@ -14,4 +14,4 @@ To learn more about the API project application's cloud infrastructure, check ou
 4. The mentioned Lambda function waits until the React application, served via the Amazon CloudFront distribution <diagram-letter>D</diagram-letter> has been completely rendered.
 5. Finally, it stores the generated HTML and some additional data into the Amazon S3 bucket <diagram-letter>B</diagram-letter>.
 
-With these steps completed, the page is ready to be served to actual website visitors. Learn more about this flow by selecting **Page Visit** in the upper diagram selector.
+With these steps completed, the page is ready to be served to actual website visitors. Learn more about this flow by selecting **Serving Pages** in the upper diagram selector.
